--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,6 +13,11 @@ $darkGray: #333;
 $gray: #666;
 $lightGray: #eee;
 $white: #fff;
+$green: #74F745;//#D1D1D1,#79FCFC,#74F745,#1820F7,#F1069B,#D1D1D1,#79FCFC,#74F745; // http://www.colourlovers.com/palette/4533567/Colors_+$ice: #79FCFC; // #79FCFC
+$magenta: #F1069B; //#F1069B
+$teal: #7CD8A2; //#AEEEFF,#7CD8A2,#74B44B,#808018,#6F3F08,#AEEEFF,#7CD8A2,#74B44B; // http://www.colourlovers.com/palette/4533559/Living_Plants
+$plant: #74B44B; //#74B44B
+
 
 // Font stacks
 $helvetica: Helvetica, Arial, sans-serif;
